fix read more → overlaps problem on home page

--- a/css/style.css
+++ b/css/style.css
@@ -233,8 +233,9 @@ body {
      bottom: 15px;
      font-size: 14px;
      color: #fff;
+     display: none;
      opacity: 0;
-     transition: opacity 0.5s;
+     transition: opacity 0.5s ease display 0.5s ease;
      font-family:'Montserrat';
      padding-bottom: 6px;
      width: 150px;
@@ -249,6 +250,7 @@ body {
  }
 
  .cards:hover .cards-footer::before {
+     display: block;
      opacity: 1;
  }
 
